<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Signal Detector</string>
    <string name="done">Listening successfully completed, time to send the results.</string>
    <string name="results">Signal Detector Output</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="lte_signal_strength">LTE Signal</string>
    <string name="serving_lte_cell_id">Cell ID</string>
    <string name="location">Location</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="enable_gps_dialog">GPS provider not enabled. Would you like to enable it?</string>
    <string name="signal_detector_is_running">Signal Detector is running</string>
    <string name="no_signal">no signal</string>
    <string name="none">none</string>
    <string name="cdma_1xrtt_base_station">1xRTT Site</string>
    <string name="_1xrtt_signal_strength">Signal</string>
    <string name="_2g_3g_signal">Signal</string>
    <string name="show_base_station">Show base station</string>
    <string name="hide_base_station">Hide base station</string>
    <string name="_2g_3g_tower">GSM/UMTS Site</string>
    <string name="exit">Exit</string>
    <string name="speed">Speed</string>
    <string name="traditional_units">Imperial units</string>
    <string name="metric_units">Metric units</string>
    <string name="bearing_north">N</string>
    <string name="bearing_nne">NNE</string>
    <string name="bearing_northeast">NE</string>
    <string name="bearing_ene">ENE</string>
    <string name="bearing_east">E</string>
    <string name="bearing_ese">ESE</string>
    <string name="bearing_southeast">SE</string>
    <string name="bearing_sse">SSE</string>
    <string name="bearing_south">S</string>
    <string name="bearing_ssw">SSW</string>
    <string name="bearing_southwest">SW</string>
    <string name="bearing_wsw">WSW</string>
    <string name="bearing_west">W</string>
    <string name="bearing_wnw">WNW</string>
    <string name="bearing_northwest">NW</string>
    <string name="bearing_nnw">NNW</string>
    
    <!-- Strings related to Settings -->
	<string name="title_activity_settings">Settings</string>
    
    <string name="pref_title_traditional_units">Use Imperial units</string>
    <string name="pref_description_traditional_units">Currently using Imperial feet and miles.</string>
    <string name="pref_description_metric_units">Currently using metres and kilometres.</string>

    <string name="pref_title_base_station">Show base station location</string>
    <string name="pref_description_base_station">Map marker will show reported base station location. May be inaccurate. (CDMA networks only.)</string>
    <string name="pref_description_base_station_off">Reported base station location will not be shown on the map.</string>
    <string name="missing">missing</string>
    <string name="current_network">Data Network</string>
    <string name="roamingInd">(roaming)</string>
    <string name="clear_map_tile_cache">Clear map tile cache.</string>    
    <string name="clear_map_cache">Clear map cache</string>    
    <string name="map_tile_cache_cleared">Map tile cache cleared.</string>
    <string name="other_lte_sites">Neighbours</string>
    <string name="voice_signal">Voice Signal</string>
    <string name="less_power_summary">Uses less power, at the expense of less-accurate position
        reporting.
    </string>
    <string name="less_power_pref">Reduced GPS usage</string>
    <string name="less_power_summary_off">More accurate locations, with greater power consumption.
    </string>
    <string name="logging_pref">Log cellular sites</string>
    <string name="logging_pref_on">Log base station information on user storage.</string>
    <string name="logging_pref_off">Logging disabled.</string>
    <string name="earfcn_pref">Display EARFCN Data (root required)</string>
    <string name="earfcn_pref_on">Displaying EARFCN on Qualcomm devices requiring root.</string>
    <string name="earfcn_pref_off">Not displaying EARFCN if root required.</string>
    <string name="tileSource">Map tiles source</string>
    <string name="tileSourceSummary">Style of map to use.</string>
    <string name="sensorlySummary">Signal strength overlay</string>
    <string name="sensorlyTitle">Signal strength overlay</string>
    <string name="ta_distance_pref">Convert timing advance value to distance</string>
    <string name="ta_distance_pref_off">Timing advance shown in microseconds.</string>
    <string name="ta_distance_pref_on">Timing advance shown as distance.</string>
    <string name="group_1_name">Network Information</string>
    <string name="group_1_description">Information about available networks.</string>
    <string name="ok">OK</string>
    <string name="permission_location_rationale">To display or log signal information, this application requires access to your location.</string>
    <string name="loading">Loading…</string>
    <string name="share_logs">Share logs to...</string>
    <string name="share">Share</string>
    <string name="sitesToLog">Types of cellular sites to log</string>
    <string name="clearLogSummary">Delete base station logs from user storage.</string>
    <string name="clearLogTitle">Clear log files</string>
    <string name="logFilesToast">Log files removed.</string>
</resources>
