<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="traditional_units"
        android:summary="@string/pref_description_traditional_units"
        android:title="@string/pref_title_traditional_units" android:summaryOn="@string/pref_description_traditional_units"
        android:summaryOff="@string/pref_description_metric_units"
        />

	<CheckBoxPreference
        android:defaultValue="false"
        android:key="show_base_station"
        android:summary="@string/pref_description_base_station"
        android:title="@string/pref_title_base_station" android:summaryOn="@string/pref_description_base_station"
        android:summaryOff="@string/pref_description_base_station_off" 
        />
	            
</PreferenceScreen>
