<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_share"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/share"
        app:showAsAction="ifRoom"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:onClick="launchSettings"
        android:title="@string/title_activity_settings"
        app:showAsAction="ifRoom"></item>

    <item
        android:id="@+id/exit"
        android:checkable="false"
        android:onClick="exitApp"
        android:title="@string/exit"
        app:showAsAction="ifRoom|withText" />

</menu>