<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="fill"
    android:background="@android:color/black"
    android:gravity="fill"
    android:orientation="vertical"
    android:padding="3dp">

    <TableLayout
        android:id="@+id/TableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:paddingBottom="5dp"
        android:stretchColumns="1"
        android:layout_gravity="top"
        android:layout_alignParentStart="false"
        android:shrinkColumns="1">

        <TableRow>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5sp"
                android:text="@string/location"
                android:textColor="@android:color/primary_text_dark" />

            <TextView
                android:id="@+id/positionLatLon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/primary_text_dark"
                android:textIsSelectable="true"
                android:layout_column="1" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textview6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5sp"
                android:text="@string/speed"
                android:textColor="@android:color/primary_text_dark" />

            <TextView
                android:id="@+id/speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/primary_text_dark"
                android:textIsSelectable="true"
                android:layout_column="1" />

        </TableRow>


        <TableRow>

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5sp"
                android:text="@string/current_network"
                android:textColor="@android:color/primary_text_dark" />

            <TextView
                android:id="@+id/networkString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/primary_text_dark"
                android:textIsSelectable="true"
                android:layout_column="1" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5sp"
                android:text="@string/serving_lte_cell_id"
                android:textColor="@android:color/primary_text_dark" />

            <TextView
                android:id="@+id/cellid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/primary_text_dark"
                android:textIsSelectable="true"
                android:layout_column="1"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5sp"
                android:text="@string/other_lte_sites"
                android:textColor="@android:color/primary_text_dark" />

            <TextView
                android:id="@+id/otherLteSites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/primary_text_dark"
                android:textIsSelectable="true"
                android:layout_column="1"
                android:text="@string/none" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/bsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5sp"
                android:text="@string/cdma_1xrtt_base_station"
                android:textColor="@android:color/primary_text_dark" />

            <TextView
                android:id="@+id/cdma_sysinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/primary_text_dark"
                android:textIsSelectable="true"
                android:layout_column="1"
                android:layout_weight="1" />
        </TableRow>

        <TableRow android:id="@+id/voiceSignalBlock">

            <TextView
                android:id="@+id/sigStrengthLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5sp"
                android:text="Voice Signal"
                android:textColor="@android:color/primary_text_dark" />

            <TextView
                android:id="@+id/cdmaSigStrength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:text="@string/no_signal"
                android:layout_column="1"
                android:textColor="@android:color/primary_text_dark"
                android:textIsSelectable="true"
                android:layout_weight="1" />
        </TableRow>
    </TableLayout>

    <WebView
        android:id="@+id/leafletView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_gravity="bottom"
        android:layout_below="@+id/TableLayout1" />

</RelativeLayout>